# zmq-demo

./: .gitignore  CMakeLists.txt  README.md  build_demo.sh  build_zmq.sh
cmake/: x86_64-macos.clang.toolchain.cmake
cpp/: CMakeLists.txt
cpp/router-dealer/: CMakeLists.txt  dealer_node.cpp  dealer_node.h  demo_common.h  demo_dealer_client.cpp  demo_dealer_server.cpp  demo_router.cpp
libs/include/: zmq.hpp
python/router-dealer/: router.py
router-dealer/: dealer.py
